--- a/museum/style.css
+++ b/museum/style.css
@@ -8,11 +8,12 @@
   src: url(./assets/fonts/Forum-Regular.ttf) format("ttf");
   font-weight: normal;
 }
-@font-face {
-  font-family: "Roboto";
+/* @font-face { */
+  /* font-family: "Roboto";
   src: url(./assets/fonts/Roboto-Light.ttf) format("ttf");
   font-weight: lighter;
-}
+} */
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
 header {
   position: relative;
   display: flex;
@@ -24,7 +25,7 @@ header {
   width: 1920px;
   height: 150px;
   color: #ffffff;
-  font-family: Forum;
+  font-family: "Forum";
   font-style: normal;
   font-weight: normal;
   font-size: 28px;
@@ -38,7 +39,7 @@ header {
 }
 .header-menu li {
   margin-left: 55px;
-  font-family: Roboto;
+  font-family: "Roboto";
   font-style: normal;
   font-weight: 200;
   font-size: 22px;
@@ -48,4 +49,62 @@ header {
 }
 .header-triangle {
   margin-right: 25px;
+}
+.welcome {
+  position: relative;
+  margin: 0 auto;
+  width: 1920px;
+  height: 842px;
+  background-color: #030303;
+}
+.welcome div {
+  position: relative;
+  z-index: 1;
+  top: 182px;
+  left: 240px;
+}
+.welcome img {
+  position: absolute;
+  width: 1000px;
+  height: 750px;
+  top: 32px;
+  right: 240px;
+}
+h1 {
+  width: 593px;
+  height: 180px;
+  font-family: "Forum";
+  font-style: normal;
+  font-weight: normal;
+  font-size: 80px;
+  line-height: 90px;
+  letter-spacing: 5px;
+  text-transform: uppercase;
+  color: #ffffff;
+}
+.welcome button {
+  width: 360px;
+  height: 75px;
+  background: #710707;
+  border-radius: 10px;
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 300;
+  font-size: 22px;
+  line-height: 26px;
+  text-align: center;
+  letter-spacing: 2px;
+  color: #ffffff;
+  border: none;
+}
+.welcome p {
+  font-family: "Roboto";
+font-style: normal;
+font-weight: 300;
+font-size: 28px;
+line-height: 33px;
+letter-spacing: 2px;
+color: #FFFFFF;
+margin-top: 25px;
+margin-bottom: 75px;
 }
