--- a/museum/style.css
+++ b/museum/style.css
@@ -4,6 +4,10 @@
   padding: 0;
 }
 
+body {
+  background: #DBDBDB;
+}
+
 @font-face {
   font-family: "Forum";
   src: url(./assets/fonts/Forum-Regular.ttf);
@@ -14,6 +18,12 @@
   font-family: "Roboto";
   src: url(./assets/fonts/Roboto-Light.ttf);
   font-weight: 300;
+}
+
+@font-face {
+  font-family: "Roboto";
+  src: url(./assets/fonts/Roboto-Thin.ttf);
+  font-weight: 200;
 }
 
 header {
@@ -140,8 +150,8 @@ h1 {
   font-weight: normal;
   font-size: 22px;
   line-height: 40px;
- margin-left: 74px;
- margin-right: 55px;
+  margin-left: 74px;
+  margin-right: 55px;
 }
 
 .slider-page span {
@@ -155,21 +165,107 @@ h1 {
 .slider-item {
   background-color: #ffffff;
   width: 16px;
-height: 16px;
-margin-right: 25px;
+  height: 16px;
+  margin-right: 25px;
 }
 
 .slider-item.active {
-  background: #D2B183;
+  background: #d2b183;
 }
 
 .slider img {
   width: 30px;
-height: 8px;
-color: #ffffff;
+  height: 8px;
+  color: #ffffff;
 }
 
 .arrow-left {
   margin-left: 35px;
   margin-right: 20px;
+}
+
+.visiting {
+  margin: 0 auto;
+  padding: 0 240px;
+  width: 1920px;
+  height: 1266px;
+  background: #FFFFFF;
+  padding-top: 75px;
+}
+
+.visiting h2 {
+  font-family: Forum;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 80px;
+  line-height: 90px;
+  letter-spacing: 5px;
+  text-transform: uppercase;
+  color: #9d8665;
+}
+
+.visiting-hr {
+  width: 1440px;
+  height: 3px;
+  border: none;
+  color: #710707;
+  background-color: #710707;
+  margin: 10px 0 75px 0;
+}
+
+.card img {
+  width: 440px;
+  height: 285px;
+}
+
+.card h3 {
+  font-family: Forum;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 32px;
+  line-height: 35px;
+  letter-spacing: 5px;
+  text-transform: uppercase;
+  color: #000000;
+  margin-top: 25px;
+}
+
+.card hr {
+  border: none;
+  color: #710707;
+  background-color: #710707;
+  width: 300px;
+  height: 2px;
+  margin: 10px 0;
+}
+
+.tour {
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: 200;
+  font-size: 22px;
+  line-height: 26px;
+  color: #000000;
+}
+
+.view {
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: 200;
+  font-size: 18px;
+  line-height: 21px;
+  color: #000000;
+  margin-top: 10px;
+}
+
+.card-wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: 75px;
+  width: 100%;
+  justify-content: space-between;
+}
+
+.card {
+  margin-bottom: 75px;
 }
