--- a/museum/style.css
+++ b/museum/style.css
@@ -4,6 +4,10 @@
   padding: 0;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   background: #dbdbdb;
 }
@@ -26,6 +30,12 @@ body {
   font-weight: 200;
 }
 
+@font-face {
+  font-family: "Roboto";
+  src: url(./assets/fonts/Roboto-Bold.ttf);
+  font-weight: 700;
+}
+
 header {
   position: relative;
   display: flex;
@@ -35,13 +45,13 @@ header {
   padding: 0 240px;
   background-color: #030303;
   width: 1920px;
-  height: 150px;
+  height: 200px;
   color: #ffffff;
   font-family: "Forum";
   font-style: normal;
   font-weight: normal;
   font-size: 28px;
-  line-height: 31px;
+  line-height: 50px;
   letter-spacing: 5px;
 }
 
@@ -49,47 +59,49 @@ header {
   text-transform: uppercase;
 }
 
-.header-menu {
+.header-menu,
+.footer-menu {
   list-style-type: none;
   display: flex;
 }
 
-.header-menu li {
-  margin-left: 55px;
+.header-menu li,
+.footer-menu li {
+  margin-left: 76px;
   font-family: "Roboto";
   font-style: normal;
   font-weight: 200;
   font-size: 22px;
-  line-height: 26px;
+  line-height: 50px;
   letter-spacing: 2px;
   color: #ffffff;
 }
 
-.header-triangle {
-  margin-right: 25px;
+.triangle {
+  margin-right: 21px;
 }
 
 .welcome {
   position: relative;
   margin: 0 auto;
   width: 1920px;
-  height: 842px;
+  height: 750px;
   background-color: #030303;
 }
 
 .welcome-content {
   position: relative;
   z-index: 1;
-  top: 182px;
-  left: 240px;
+  padding-top: 114px;
+  padding-left: 240px;
 }
 
-.mona-liza {
+.welcome-img {
   position: absolute;
-  width: 1000px;
+  width: 1215px;
   height: 750px;
-  top: 32px;
-  right: 240px;
+  right: 0;
+  top: 0;
 }
 
 h1 {
@@ -111,7 +123,7 @@ h1 {
   border-radius: 10px;
   font-family: "Roboto";
   font-style: normal;
-  font-weight: 300;
+  font-weight: 200;
   font-size: 22px;
   line-height: 26px;
   text-align: center;
@@ -128,67 +140,15 @@ h1 {
   line-height: 33px;
   letter-spacing: 2px;
   color: #ffffff;
-  margin-top: 25px;
-  margin-bottom: 75px;
-}
-
-.slider {
-  background: #030303;
-  width: 600px;
-  height: 120px;
-  display: flex;
-  align-items: center;
-  position: absolute;
-  bottom: 0;
-  right: 240px;
-}
-
-.slider-page {
-  color: #ffffff;
-  font-family: Roboto;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 22px;
-  line-height: 40px;
-  margin-left: 74px;
-  margin-right: 55px;
-}
-
-.slider-page span {
-  margin-right: 10px;
-}
-
-.slider-page span:last-child {
-  margin-right: 0;
-}
-
-.slider-item {
-  background-color: #ffffff;
-  width: 16px;
-  height: 16px;
-  margin-right: 25px;
-}
-
-.slider-item.active {
-  background: #d2b183;
-}
-
-.slider img {
-  width: 30px;
-  height: 8px;
-  color: #ffffff;
-}
-
-.arrow-left {
-  margin-left: 35px;
-  margin-right: 20px;
+  margin-top: 26px;
+  margin-bottom: 76px;
 }
 
 .visiting {
   margin: 0 auto;
   padding: 0 240px;
   width: 1920px;
-  height: 1266px;
+  height: 1265px;
   background: #ffffff;
   padding-top: 75px;
 }
@@ -210,7 +170,7 @@ h1 {
   border: none;
   color: #710707;
   background-color: #710707;
-  margin: 10px 0 75px 0;
+  margin: 25px 0 75px 0;
 }
 
 .card img {
@@ -236,7 +196,7 @@ h1 {
   background-color: #710707;
   width: 300px;
   height: 2px;
-  margin: 10px 0;
+  margin: 9px 0 10px;
 }
 
 .tour {
@@ -261,13 +221,12 @@ h1 {
 .card-wrapper {
   display: flex;
   flex-wrap: wrap;
-  margin-top: 75px;
   width: 100%;
   justify-content: space-between;
 }
 
 .card {
-  margin-bottom: 75px;
+  margin-bottom: 77px;
 }
 
 .explore {
@@ -316,30 +275,291 @@ h1 {
   color: #caaa7d;
 }
 
- .explore .slider {
-  width: 39px;
-  height: 700px;
-  background-color: inherit;
-  position: absolute;
-  top: 0;
-  left: 420px;
-  z-index: 2;
-}
-
 .explore-main {
   width: 720px;
   height: 700px;
 }
 
-.explore-left {
-  width: 440px;
-  height: 700px;
-  position: absolute;
-  z-index: 1;
-  left: 0;
+.video {
+  width: 1920px;
+  height: 1009px;
+  padding: 90px 240px 75px 240px;
+  margin: 0 auto;
+  background-color: #ffffff;
 }
 
-.explore .photo {
+.video iframe {
+  width: 1440px;
+  height: 714px;
+}
+
+.video h2 {
+  font-family: Forum;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 80px;
+  line-height: 90px;
+  letter-spacing: 5px;
+  text-transform: uppercase;
+  color: #9d8665;
+}
+
+.video-content {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 40px;
+}
+
+.video p {
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: 300;
+  font-size: 22px;
+  line-height: 38px;
+  color: #000000;
+  align-items: center;
+  width: 720px;
+}
+
+.tickets {
+  background: #030303;
+  margin: 0 auto;
+  width: 1920px;
+  height: 893px;
+  padding: 75px 240px 25px 240px;
+}
+
+.tickets h2 {
+  font-family: Forum;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 80px;
+  line-height: 90px;
+  letter-spacing: 5px;
+  text-transform: uppercase;
+  color: #ffffff;
+}
+
+.tickets hr {
+  width: 1440px;
+  height: 3px;
+  background: #710707;
+  border: none;
+  color: #710707;
+  margin: 25px 0 75px 0;
+}
+
+.tickets h6 {
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 28px;
+  line-height: 33px;
+  color: #ffffff;
+}
+
+.tickets-wrapper {
+  display: flex;
+}
+
+form {
+  margin-left: 60px;
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
+
+.type-ticket label {
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: 300;
+  font-size: 22px;
+  line-height: 26px;
+  color: #ffffff;
+}
+.type-ticket input {
+  margin-bottom: 49px;
+  height: 17px;
+  width: 17px;
+  margin-right: 23px;
+}
+
+.type-ticket h6 {
+  margin-bottom: 50px;
+}
+
+.basic {
+  margin: 11px 0 14px;
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: 300;
+  font-size: 22px;
+  line-height: 26px;
+  color: #ffffff;
+  width: 150px;
+}
+
+.amount h6 {
+  text-align: right;
+}
+
+.senior {
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: 300;
+  font-size: 22px;
+  line-height: 26px;
+  color: #ffffff;
+  margin: 35px 0 14px;
+  width: 150px;
+}
+
+.total {
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 28px;
+  line-height: 33px;
+  letter-spacing: 1.65px;
+  color: #ffffff;
+  margin: 50px 0;
+}
+
+.amount button {
+  width: 175px;
+  height: 50px;
+  background: #ffffff;
+  border-radius: 2px;
+  border: none;
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: 300;
+  font-size: 22px;
+  line-height: 26px;
+  text-align: center;
+  letter-spacing: 2px;
+  color: #000000;
+}
+
+.amount {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+}
+
+.contacts {
+  height: 963px;
+  width: 1920px;
+  background: #ffffff;
+  margin: 0 auto;
+  padding: 75px 240px;
+}
+
+.contacts h2 {
+  font-family: Forum;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 80px;
+  line-height: 90px;
+  letter-spacing: 5px;
+  text-transform: uppercase;
+  color: #9d8665;
+}
+
+.contacts hr {
+  width: 1440px;
+  height: 3px;
+  background: #710707;
+  border: none;
+  color: #710707;
+  margin: 25px 0 75px 0;
+}
+
+.contacts-wrapper {
+  display: flex;
+  justify-content: space-between;
+}
+
+.contacts img {
+  width: 960px;
+  height: 620px;
+}
+
+.left h6 {
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 28px;
+  line-height: 33px;
+  color: #000000;
+}
+
+.left h6 + h6 {
+  margin: 1px 0 36px;
+}
+
+.left p {
+  margin-bottom: 20px;
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: 300;
+  font-size: 22px;
+  line-height: 26px;
+  color: #000000;
+}
+
+footer {
+  width: 1920px;
+  height: 300px;
+  background: #030303;
+  margin: 0 auto;
+  padding: 75px 240px;
+  display: flex;
   position: relative;
 }
 
+.footer-left span {
+  font-family: Forum;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 28px;
+  line-height: 50px;
+  letter-spacing: 5px;
+  text-transform: uppercase;
+  color: #ffffff;
+}
+
+.footer-menu {
+  flex-direction: column;
+  flex-wrap: wrap;
+  height: 100%;
+  margin-left: 145px;
+  width: 366px;
+}
+
+.footer-menu li {
+  margin-left: 0;
+  width: 107px;
+  margin-right: 153px;
+}
+
+.social a {
+  margin-right: 24px;
+}
+
+.social {
+  position: absolute;
+  right: 240px;
+  bottom: 89px;
+}
+
+.header-menu a,
+.footer-menu a {
+  text-decoration: none;
+  color: #ffffff;
+}
+
+.footer-menu a:hover,
+.header-menu a:hover {
+  color: #9d8665;
+}
